2004-07-01  Release Manager

	* GCC 3.4.1 released.

2004-04-18  Release Manager

	* GCC 3.4.0 released.

2004-02-22  Matthias Klose  <doko@debian.org>

	* config.guess: Update from version 2003-10-07 to 2004-02-16.
	* config.sub: Update from version 2003-10-07 to 2004-02-16.

2003-08-07  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in: Don't initialize GCINCS to boehm-gc/include.
	* Regenerate.	

2002-04-28  Mark Mitchell  <mark@codesourcery.com>

	* .cvsignore: Remove files that are present in CVS.

2001-07-02  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in: Added aux-dir hacks to satisfy automake and
	in-tree builds.

2001-05-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>

	* configure.in: Use correct include dir for new Boehm GC.
	* configure: Rebuilt.

2000-09-10  Alexandre Oliva  <aoliva@redhat.com>

	* Updated from libtool multi-language branch.

2000-02-14  Tom Tromey  <tromey@cygnus.com>

	* ltdl.c: If HAVE_BOEHM_GC defined, includ gc.h.
	* Makefile.in: Rebuilt.
	* Makefile.am (INCLUDES): New macro.
	* config.h.in, configure: Rebuilt.
	* acconfig.h (HAVE_BOEHM_GC): Define.
	* configure.in: Handle --enable-java-gc.
